k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ado-webserver
  labels:
    app: ado-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ado-webserver
  template:
    metadata:
      labels:
        app: ado-webserver
    spec:
      containers:
      - name: ado-webserver
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/ded/ado-webserver:$(Build.BuildId)
        ports:
        - containerPort: 8080
          name: web
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
