k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: my-service
spec:
  ports:
  - name: web
    port: 8080
    targetPort: web
    protocol: TCP
  selector:
    app: my-service
